ipc/ipdl/test/ipdl/ok/PUniquePtrOfActorsSub.ipdl
include protocol PUniquePtrOfActors;

protocol PUniquePtrOfActorsSub {
    manager PUniquePtrOfActors;

child: async __delete__();
};
