ipc/ipdl/test/ipdl/error/subprotocolOpens.ipdl
include protocol opensSubprotocol;

protocol subprotocolOpens {
    parent opens opensSubprotocol;

    manager opensSubprotocol;

child: __delete__();
state DEAD: send __delete__;
};
